--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry excluding="com/xx/mongo/BaseDBObject.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mongo-java-driver-3.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
